--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "private": true,
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@tailwindcss/forms": "^0.5.9",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ai-visualization-web-app": "file:",
+    "auth0": "^4.14.0",
+    "axios": "^1.7.8",
+    "chart.js": "^4.4.6",
+    "framer-motion": "^11.12.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
