--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.15",
     "web-vitals": "^2.1.4"
