--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "auth0": "^4.14.0",
     "axios": "^1.7.8",
     "chart.js": "^4.4.6",
+    "firebase": "^11.0.2",
     "framer-motion": "^11.12.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
